--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,5 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    app.consumer.upload_picture_consumer:
+        class: AppBundle\Consumer\UploadPictureConsumer
