--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 app_homepage:
     path:     /
     defaults: { _controller: AppBundle:Default:index }
+app_game:
+    type:     rest
+    resource: AppBundle\Controller\GamesController
