--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -19,7 +19,7 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+    serializer:      { enable_annotations: true }
     templating:
         engines: ['twig']
     default_locale:  "%locale%"
@@ -106,12 +106,15 @@ doctrine_mongodb:
         default:
             auto_mapping: true
 
-fos_rest:
-    routing_loader:
-        default_format: json
-    view:
-        templating_formats:
-            json: true
+#fos_rest:
+#    routing_loader:
+#        default_format: json
+#    view:
+#        templating_formats:
+#            json: false
+#    serializer:
+#        serialize_null: true
+
 
 #    service:
 #        inflector: app.util.singularize_inflector
