--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -112,3 +112,10 @@ fos_rest:
         rules:
             - { path: '^/', priorities: ['json'], fallback_format: json, prefer_extension: false }
     disable_csrf_role: IS_AUTHENTICATED_ANONYMOUSLY
+
+nelmio_cors:
+    defaults:
+        allow_origin: ['*']
+        allow_headers: ['*']
+        allow_methods: ['POST', 'PUT', 'PATCH', 'GET', 'DELETE']
+        max_age: 3600
