Adds missing paths configuration for cors

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -119,3 +119,5 @@ nelmio_cors:
         allow_headers: ['*']
         allow_methods: ['POST', 'PUT', 'PATCH', 'GET', 'DELETE']
         max_age: 3600
+    paths:
+        ^/:
