added UserStory document

--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -4,3 +4,6 @@ AppBundle\Document\Game:
             id:  true
         name:
             type: string
+    embedMany:
+        userStories:
+            targetDocument: UserStory
