--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,15 +86,10 @@ old_sound_rabbit_mq:
             # requires php-amqplib v2.4.1+
             heartbeat: 0
     producers:
-        upload_picture:
+        game:
+            class:            AppBundle\Producer\GameProducer
             connection:       default
-            exchange_options: {name: 'upload-picture', type: direct}
-    consumers:
-        upload_picture:
-            connection:       default
-            exchange_options: {name: 'upload-picture', type: direct}
-            queue_options:    {name: 'upload-picture'}
-            callback:         app.consumer.upload_picture_consumer
+            exchange_options: {name: 'game', type: topic, durable: true}
 
 doctrine_mongodb:
     connections:
