--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,12 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "php-amqplib/rabbitmq-bundle": "^1.9",
-        "doctrine/mongodb-odm": "~1.0",
+        "doctrine/mongodb-odm": "~1.0.5",
         "doctrine/mongodb-odm-bundle": "~3.0",
         "friendsofsymfony/rest-bundle": "^1.7",
         "jms/serializer-bundle": "^1.1",
-        "nelmio/cors-bundle": "^1.4"
+        "nelmio/cors-bundle": "^1.4",
+        "mongofill/mongofill": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
