--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,5 +24,5 @@ parameters:
     rabbitmq.host:     'spotted-monkey.rmq.cloudamqp.com'
     rabbitmq.port:     5672
     rabbitmq.user:     'fjnfmkuv'
-    rabbitmq.password: ***REMOVED***
+    rabbitmq.password: ~
     rabbitmq.vhost:    'fjnfmkuv'
