Cleaning and fixes: - adds Game model and document unit tests, - adds GameRepository as a service, - removes serialization from model, using serializer

--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -1,4 +1,6 @@
 AppBundle\Document\Game:
+    repositoryClass: AppBundle\Repositories\GameRepository
+    collection: game
     fields:
         id:
             id:  true
