--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: "@AppBundle/Resources/config/services.yml" }
+    - { resource: "@AppBundle/Resources/config/repositories.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -87,9 +88,8 @@ old_sound_rabbit_mq:
             heartbeat: 0
     producers:
         game:
-            class:            AppBundle\Producer\GameProducer
             connection:       default
-            exchange_options: {name: 'game', type: topic, durable: true}
+            exchange_options: { name: 'game', type: topic, durable: true }
 
 doctrine_mongodb:
     connections:
