--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -12,5 +12,5 @@ AppBundle\Document\Game:
         tasks:
             targetDocument: Task
     embedOne:
-        task:
+        currentTask:
             targetDocument: Task
