--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,6 +91,13 @@ old_sound_rabbit_mq:
             connection:       default
             exchange_options: { name: 'game', type: fanout, durable: true }
 
+    consumers:
+        read_tasks:
+            connection: default
+            exchange_options: { name: 'task', type: fanout }
+            queue_options: { name: 'task.create' }
+            callback: app.util_consumer.task_consumer
+
 doctrine_mongodb:
     connections:
         default:
