--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -8,9 +8,11 @@ AppBundle\Document\Game:
             type: string
         players:
             type: collection
+        status:
+            type: string
     embedMany:
         tasks:
             targetDocument: Task
     embedOne:
-        task:
+        currentTask:
             targetDocument: Task
