--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,11 @@
         "friendsofsymfony/rest-bundle": "^1.7",
         "jms/serializer-bundle": "^1.1",
         "nelmio/cors-bundle": "^1.4",
-        "mongofill/mongofill": "dev-master"
+        "mongofill/mongofill": "dev-master",
+        "symfony/phpunit-bridge": "^3.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0",
         "phpunit/phpunit": "4.8.*"
     },
     "scripts": {
