fixed currentTask logic in Game object; updated GameManager & mongo schema

--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -10,9 +10,8 @@ AppBundle\Document\Game:
             type: collection
         status:
             type: string
+        currentTaskId:
+            type: string
     embedMany:
         tasks:
-            targetDocument: Task
-    embedOne:
-        currentTask:
             targetDocument: Task
