--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,6 +91,10 @@ old_sound_rabbit_mq:
             connection:       default
             exchange_options: { name: 'game', type: direct, durable: true }
             queue_options: { name: 'games' }
+        task:
+            connection:       default
+            exchange_options: { name: 'game.task', type: direct, durable: true }
+            queue_options: { name: 'games' }
 
     consumers:
         read_tasks:
