added RabbitMQ bundle and publish message when game is created

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -128,3 +128,9 @@ nelmio_cors:
         max_age: 3600
     paths:
         ^/:
+
+pgs_rabbit_mq:
+    host: '%rabbitmq.host%:%rabbitmq.port%'
+    vhost: %rabbitmq.vhost%
+    user: %rabbitmq.user%
+    password: %rabbitmq.password%
