refactor for ddd?

--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -1,4 +1,4 @@
-AppBundle\Document\Game:
+AppBundle\Model\Game:
     repositoryClass: AppBundle\Repositories\GameRepository
     collection: game
     fields:
