--- a/src/AppBundle/Resources/config/repositories.yml
+++ b/src/AppBundle/Resources/config/repositories.yml
@@ -5,11 +5,11 @@ services:
             - '@doctrine_mongodb.odm.default_document_manager'
             - 'getRepository'
         arguments:
-            - 'AppBundle\Document\Game'
+            - 'AppBundle\Model\Game'
     app.repositories.task_repository:
         class: AppBundle\Repositories\TaskRepository
         factory:
             - '@doctrine_mongodb.odm.default_document_manager'
             - 'getRepository'
         arguments:
-            - 'AppBundle\Document\Task'
+            - 'AppBundle\Model\Task'
