--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -38,3 +38,11 @@ services:
           - '@jms_serializer.serializer'
         tags:
             - { name: kernel.event_subscriber }
+
+    app.util_listener.player_subscriber:
+        class: AppBundle\Util\Listener\PlayerSubscriber
+        arguments:
+          - '@pgs_rabbit_mq.service.rabbit_mqpublisher'
+          - '@jms_serializer.serializer'
+        tags:
+            - { name: kernel.event_subscriber }
