features: - adding task - join player - vote - show votes

--- a/src/AppBundle/Resources/config/doctrine/Player.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Player.mongodb.yml
@@ -17,3 +17,5 @@ AppBundle\Document\Player:
             type: string
         email:
             type: string
+        offline:
+            type: boolean
