--- a/src/AppBundle/Resources/config/serializer/Document.Player.yml
+++ b/src/AppBundle/Resources/config/serializer/Document.Player.yml
@@ -13,3 +13,6 @@ AppBundle\Document\Player:
         email:
             expose: true
             type: string
+        offline:
+            expose: true
+            type: boolean
