--- a/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
+++ b/src/AppBundle/Resources/config/doctrine/Game.mongodb.yml
@@ -12,7 +12,7 @@ AppBundle\Document\Game:
             type: string
     embedMany:
         tasks:
-            targetDocument: Task
+            targetDocument: AppBundle\Document\Task
     referenceMany:
         players:
             targetDocument: AppBundle\Document\Player
