--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -10,7 +10,6 @@ server {
     # This rule should only be placed on your development environment
     # In production, don't include this and don't deploy app_dev.php or config.php
     location ~ ^/(app_dev|config)\.php(/|$) {
-        add_header 'Access-Control-Allow-Origin' '*';
         fastcgi_pass php:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
@@ -43,4 +42,13 @@ server {
         # Remove the internal directive to allow URIs like this
         internal;
     }
+
+     # return 404 for all other php files not matching the front controller
+     # this prevents access to other php files you don't want to be accessible.
+     location ~ \.php$ {
+        return 404;
+     }
+
+     error_log /var/log/nginx/project_error.log;
+     access_log /var/log/nginx/project_access.log;
 }
