added nginx.conf and usermod to set www-data user id to 5000 (fix for cache/logs permissions)

--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -16,4 +16,7 @@ RUN docker-php-ext-install sockets
 
 WORKDIR /app
 
+RUN usermod -u 5000 www-data
+RUN chown -R www-data:www-data /app
+
 CMD ["php-fpm"]
