fixed docker config

--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -1,6 +1,6 @@
 server {
     server_name symfony.dev www.symfony.dev;
-    root /app/web;
+    root /app_sync/web;
 
     location / {
         # try to serve file directly, fallback to app.php
