--- a/docker-sync.yml
+++ b/docker-sync.yml
@@ -62,7 +62,7 @@ syncs:
     # optional, a list of regular expressions to exclude from the fswatch - see fswatch docs for details
 
     # optional, default can be either rsync or unison See Strategies in the wiki for explanation
-    sync_strategy: 'unison'
+    sync_strategy: 'native_osx'
 
     # this does not user groupmap but rather configures the server to map
     # optional: usually if you map users you want to set the user id of your application container here
